Fixed up the fonts a bit but the alignment is a bit out of order.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body {
+    background-color: hsl(0, 0%, 95%);
+}
+
+
+
 .row-stack {
     display: flex;
     flex-direction: row;
@@ -6,10 +12,6 @@
     text-align: center;
 }
 
-
-.big-rectangle {
-
-}
 
 .sedan-rectangle {
     width: 300px;
@@ -64,7 +66,7 @@
 
 .section1 {
     background-color: hsl(31, 77%, 52%);
-    border-radius: 20px 0 0 20px;
+    border-radius: 10px 0 0 10px;
 }
 
 .section2 {
@@ -73,7 +75,7 @@
 
 .section3 {
     background-color: hsl(179, 100%, 13%);
-    border-radius: 0 20px 20px 0;
+    border-radius: 0 10px 10px 0;
 }
 
 .item-container {
@@ -87,7 +89,7 @@
 
 @font-face {
     font-family: 'Big Shoulders';
-    src: url('Big_Shoulders_Display\BigShouldersDisplay-VariableFont_wght.ttf');
+    src: url('Big_Shoulders_Display\static\BigShouldersDisplay-Bold.ttf');
 }
 
 
@@ -98,8 +100,7 @@
 
 
 .button {
-    background-color: white;
-    color: black;
+    background-color: hsl(0, 0%, 95%);
     border: none;
     padding: 10px 20px;
     border-top-left-radius: 20px;
@@ -109,6 +110,15 @@
 }
 
 
+.experiment {
+    font-family: 'Big Shoulders',sans-serif
+}
+
+
+p {
+    font-size: small;
+    color: hsla(0, 0%, 100%, 0.75)
+}
 
 /* 1. Big_Shoulders_Display\static\BigShouldersDisplay-Black.ttf
 2. */
